2016-December-22 Struan Robertson

		* gDensityOfStates.cpp, DefindeDensityOfStates.cpp: Added a new density of states class
		that allows densities of states calculated outside of MESMER to be read in. 

2016-November-27 Struan Robertson

		* Documentation update.

		* Added Glyoxyl example.

2016-November-27 Struan Robertson

		* ConditionsManager.cpp/.h, System.cpp/.h: Moved XML writer methods from System 
		to ConditionsManager.

2016-November-23 Struan Robertson

		* Merge of MesmerMPI branch into trunk.

2016-November-22 Struan Robertson

		* FourierGrid1D.cpp: Updated prior to merge.

		* MesmerQA: Updated priort to merge.

2016-October-18 Struan Robertson

		* MesmerILT.cpp, Matrix.h, main.cpp: Minor error handling changes.

2016-October-16 Struan Robertson

		* FourierGrid1D.cpp: Initial outline implementation of the Fourier Grid methods for 
		the states of an anharmonic oscillators.

		* Morse.cpp: Minor tidy.
		
2016-July-17 Struan Robertson

		* System.h/.cpp: Altered to print out the results of fitting the trace data.

		* TMattix.h: Minor optimization.
		
2016-July-17 Struan Robertson

		* System.cpp, MesmerFlags.h/.cpp, FittingUtils.cpp, OH_acetylene_rawdata.xml: Trace data
		analysis altered to account for lack of independent experimental error estimates.
		
2016-May-15 Struan Robertson

		* System.cpp, OH_acetylene_rawdata.xml: Minor changes to experimental trace fitting.
		
2016-May-14 Struan Robertson

		* ConditionsManager.cpp/.h, CollisionOperator.cpp/.h, System.cpp, OH_acetylene_rawdata.xml: 
		Initial revision of experimental trace fitting.
		
2016-May-02 Struan Robertson

		* System.h: Version update.
		
		* Reaction.h, DiffusiveLossReaction.h/.cpp: Initial revision of diffusive loss term.

2016-February-19 Chris Morley

	* Windows VC14/distribution/NSISScriptToCreateInstaller.nsi:
	  Update. Runtime library is now called vc_redist.x86.exe
	
	* Windows VC14/distribution/ReadMe.txt: add Robin.

2016-February-18 Struan Robertson
